# wayland

./: meson.build
doc/doxygen/: meson.build
doc/doxygen/xml/: meson.build
doc/man/: meson.build
src/: connection.c  event-loop.c  meson.build  wayland-os.c  wayland-server.c  wayland-shm.c
tests/: client-test.c  connection-test.c  event-loop-test.c  meson.build  os-wrappers-test.c  resources-test.c  test-helpers.c  test-runner.c
